Ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoctorCare</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -101,7 +101,7 @@
             </div>
 
             <div class="col-b">
-                <img src="assets/image.png" alt="Mulher negra vestindo moletom verde com as duas mãos no peito e sorrindo."/>
+                <img src="./assets/image.png" alt="Mulher negra vestindo moletom verde com as duas mãos no peito e sorrindo."/>
             </div>
         
             <div class="stats">
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="col-b">
-                <img src="assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="Doutor feliz segurando prancheta com pacientes">
+                <img src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="Doutor feliz segurando prancheta com pacientes">
             </div>
         </div>
     </section>
@@ -244,7 +244,7 @@
             </div>
 
             <div class="col-b">
-                <img src="assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="Homem negro com moletom bege mexendo no celular">
+                <img src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="Homem negro com moletom bege mexendo no celular">
             </div>
         </div>
     </section>
@@ -314,6 +314,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
