Arrumado "Agente" para "Agende"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="#about" onclick="closeMenu()">Sobre</a></li>
                 </ul>
 
-                <a class="button" href="#contact" onclick="closeMenu()">Agente sua consulta</a>
+                <a class="button" href="#contact" onclick="closeMenu()">Agende sua consulta</a>
 
                 <ul class="social-links">
                     <li>
